// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-time-input component should handle default value 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label" value="01:01:20">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-11" id="ic-time-input-11-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-11-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-11-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-11-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-11-label ic-time-input-11-screen-reader-info  ic-time-input-11-selected-time-info ic-time-input-11-assistive-hint" id="ic-time-input-11" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="fit-to-value hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH" value="01">
              :
              <input aria-label="minute" aria-required="false" class="fit-to-value minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM" value="01">
              :
              <input aria-label="second" aria-required="false" class="fit-to-value second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS" value="20">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-11-selected-time-info">
        <span role="status">
          Selected time: 01:01:20
        </span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-11" message="" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-11" type="hidden" value="2025-10-21T00:01:20.000Z">
</ic-time-input>
`;

exports[`ic-time-input component should handle single digit hour and minute 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label" value="1:1:20">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-12" id="ic-time-input-12-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-12-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-12-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-12-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-12-label ic-time-input-12-screen-reader-info  ic-time-input-12-selected-time-info ic-time-input-12-assistive-hint" id="ic-time-input-12" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="fit-to-value hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH" value="1">
              :
              <input aria-label="minute" aria-required="false" class="fit-to-value minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM" value="1">
              :
              <input aria-label="second" aria-required="false" class="fit-to-value second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS" value="20">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-12-selected-time-info">
        <span role="status">
          Selected time: 01:01:20
        </span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-12" message="" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-12" type="hidden" value="2025-10-21T00:01:20.000Z">
</ic-time-input>
`;

exports[`ic-time-input component should remove handle disabled=false 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-15" id="ic-time-input-15-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-15-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-15-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-15-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-15-label ic-time-input-15-screen-reader-info   ic-time-input-15-assistive-hint" id="ic-time-input-15" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-15-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-15" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-15" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-0" id="ic-time-input-0-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-0-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-0-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-0-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-0-label ic-time-input-0-screen-reader-info   ic-time-input-0-assistive-hint" id="ic-time-input-0" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-0-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-0" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-0" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render as disabled 1`] = `
<ic-time-input class="ic-time-input-disabled ic-time-input-medium" disabled="" label="Test label">
  <template shadowrootmode="open">
    <ic-input-container disabled="">
      <ic-input-label class="ic-input-label-disabled with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-2">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext" variant="caption">
          <span id="ic-time-input-2-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-2-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-2-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container disabled="" id="ic-time-input-2" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" disabled="" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" disabled="" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" disabled="" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" disabled="" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-2-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-2" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" disabled="" name="ic-time-input-2" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render as required 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label" required="">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-1" id="ic-time-input-1-label">
            Test label
            <span aria-hidden="true" id="asterisk-span">
              *
            </span>
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-1-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-1-screen-reader-info">
        required, Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-1-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-1-label ic-time-input-1-screen-reader-info   ic-time-input-1-assistive-hint" id="ic-time-input-1" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="true" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="true" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="true" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-1-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-1" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-1" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render as required: required-prop-false 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label" required="">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-1" id="ic-time-input-1-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-1-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-1-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-1-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-1-label ic-time-input-1-screen-reader-info   ic-time-input-1-assistive-hint" id="ic-time-input-1" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH" value="">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM" value="">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS" value="">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-1-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-1" message="" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-1" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render disabled, with clock button 1`] = `
<ic-time-input class="ic-time-input-disabled ic-time-input-medium" disabled="" label="Test label" show-clock-button="true" value="13:45:00">
  <template shadowrootmode="open">
    <ic-input-container disabled="">
      <ic-input-label class="ic-input-label-disabled with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-10">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext" variant="caption">
          <span id="ic-time-input-10-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-10-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-10-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container disabled="" id="ic-time-input-10" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="fit-to-value hour-input" disabled="" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH" value="13">
              :
              <input aria-label="minute" aria-required="false" class="fit-to-value minute-input" disabled="" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM" value="45">
              :
              <input aria-label="second" aria-required="false" class="fit-to-value second-input" disabled="" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS" value="00">
            </div>
            <div class="action-buttons">
              <ic-button class="clear-button ic-button-disabled ic-button-size-medium ic-button-variant-icon-tertiary ic-theme-dark" exportparts="button" id="clear-button">
                <template shadowrootmode="open">
                  <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-clear-button" label="Clear input" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                    <button aria-describedby="ic-tooltip-ic-button-with-tooltip-clear-button" aria-disabled="true" aria-label="Clear input" class="button" disabled="" part="button" tabindex="0" type="button">
                      <slot></slot>
                    </button>
                  </ic-tooltip>
                </template>
                svg
              </ic-button>
              <div class="show-clock-button-wrapper">
                <div class="divider medium"></div>
                <ic-button class="clock-button ic-button-disabled ic-button-size-medium ic-button-variant-icon-tertiary ic-theme-dark" exportparts="button" id="clock-button">
                  <template shadowrootmode="open">
                    <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-clock-button" label="Display clock" placement="bottom" silent="" target="ic-button-with-tooltip-clock-button">
                      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-clock-button" aria-disabled="true" aria-haspopup="dialog" aria-label="Display clock" class="button" disabled="" part="button" tabindex="0" type="button">
                        <slot></slot>
                      </button>
                    </ic-tooltip>
                  </template>
                  svg
                </ic-button>
              </div>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-10-selected-time-info">
        <span role="status">
          Selected time: 13:45:00
        </span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-10" message="" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" disabled="" name="ic-time-input-10" type="hidden" value="2025-10-21T12:45:00.000Z">
</ic-time-input>
`;

exports[`ic-time-input component should render large 1`] = `
<ic-time-input class="ic-time-input-large" label="Test label" size="large">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-4" id="ic-time-input-4-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-4-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-4-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-4-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-4-label ic-time-input-4-screen-reader-info   ic-time-input-4-assistive-hint" id="ic-time-input-4" role="group" size="large" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="large" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-4-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-4" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-4" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render small 1`] = `
<ic-time-input class="ic-time-input-small" label="Test label" size="small">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-3" id="ic-time-input-3-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-3-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-3-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-3-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-3-label ic-time-input-3-screen-reader-info   ic-time-input-3-assistive-hint" id="ic-time-input-3" role="group" size="small" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="small" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-3-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-3" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-3" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render with custom helper text 1`] = `
<ic-time-input class="ic-time-input-medium" helper-text="Test helper text" label="Test label">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-5" id="ic-time-input-5-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-5-helper-text">
            Test helper text
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-5-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-5-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-5-label ic-time-input-5-screen-reader-info ic-time-input-5-helper-text  ic-time-input-5-assistive-hint" id="ic-time-input-5" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-5-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-5" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-5" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render with custom validation status and text 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label" validation-status="error" validation-text="Test error text">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-7" id="ic-time-input-7-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-7-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-7-screen-reader-info">
        invalid data, Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-7-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-7-label ic-time-input-7-screen-reader-info ic-time-input-7-validation-text  ic-time-input-7-assistive-hint" id="ic-time-input-7" role="group" size="medium" validationstatus="error">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-7-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-7" message="Test error text" status="error"></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-7" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render with disabled times 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-14" id="ic-time-input-14-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-14-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-14-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-14-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-14-label ic-time-input-14-screen-reader-info   ic-time-input-14-assistive-hint" id="ic-time-input-14" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-14-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-14" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-14" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render with helper text hidden 1`] = `
<ic-time-input class="ic-time-input-medium" hide-helper-text="true" label="Test label">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label>
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-6" id="ic-time-input-6-label">
            Test label
          </label>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-6-screen-reader-info">
        Use format HH:MM:SS
Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-6-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-6-label ic-time-input-6-screen-reader-info   ic-time-input-6-assistive-hint" id="ic-time-input-6" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-6-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-6" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-6" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render with min/max times 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label" max-time="20:00:00" min-time="08:00:00">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-13" id="ic-time-input-13-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-13-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-13-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-13-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-13-label ic-time-input-13-screen-reader-info   ic-time-input-13-assistive-hint" id="ic-time-input-13" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-13-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-13" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-13" type="hidden" value="">
</ic-time-input>
`;

exports[`ic-time-input component should render with open clock button 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label" show-clock-button="true" value="13:45:00">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-9" id="ic-time-input-9-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-9-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-9-screen-reader-info">
        Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-9-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-9-label ic-time-input-9-screen-reader-info  ic-time-input-9-selected-time-info ic-time-input-9-assistive-hint" id="ic-time-input-9" role="group" size="medium" validationstatus="">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="fit-to-value hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH" value="13">
              :
              <input aria-label="minute" aria-required="false" class="fit-to-value minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM" value="45">
              :
              <input aria-label="second" aria-required="false" class="fit-to-value second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS" value="00">
            </div>
            <div class="action-buttons">
              <ic-button class="clear-button ic-button-size-medium ic-button-variant-icon-tertiary ic-theme-dark" exportparts="button" id="clear-button">
                <template shadowrootmode="open">
                  <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-clear-button" label="Clear input" placement="bottom" silent="" target="ic-button-with-tooltip-clear-button">
                    <button aria-describedby="ic-tooltip-ic-button-with-tooltip-clear-button" aria-label="Clear input" class="button" part="button" tabindex="0" type="button">
                      <slot></slot>
                    </button>
                  </ic-tooltip>
                </template>
                svg
              </ic-button>
              <div class="show-clock-button-wrapper">
                <div class="divider medium"></div>
                <ic-button class="clock-button ic-button-size-medium ic-button-variant-icon-tertiary ic-theme-dark" exportparts="button" id="clock-button">
                  <template shadowrootmode="open">
                    <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-clock-button" label="Display clock" placement="bottom" silent="" target="ic-button-with-tooltip-clock-button">
                      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-clock-button" aria-haspopup="dialog" aria-label="Display clock" class="button" part="button" tabindex="0" type="button">
                        <slot></slot>
                      </button>
                    </ic-tooltip>
                  </template>
                  svg
                </ic-button>
              </div>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-9-selected-time-info">
        <span role="status">
          Selected time: 13:45:00
        </span>
      </span>
      <ic-input-validation arialivemode="polite" for="ic-time-input-9" message="" status=""></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-9" type="hidden" value="2025-10-21T12:45:00.000Z">
</ic-time-input>
`;

exports[`ic-time-input component should render with validation-aria-live 1`] = `
<ic-time-input class="ic-time-input-medium" label="Test label" validation-aria-live="assertive" validation-status="error" validation-text="Test error text">
  <template shadowrootmode="open">
    <ic-input-container>
      <ic-input-label class="with-helper">
        <!---->
        <slot name="helper-text" slot="helper-text"></slot>
        <ic-typography variant="label">
          <label htmlfor="ic-time-input-8" id="ic-time-input-8-label">
            Test label
          </label>
        </ic-typography>
        <ic-typography class="helpertext helpertext-normal" variant="caption">
          <span id="ic-time-input-8-helper-text">
            Use format HH:MM:SS
          </span>
        </ic-typography>
      </ic-input-label>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-8-screen-reader-info">
        invalid data, Use format HH:MM:SS.
      </span>
      <span aria-hidden="true" class="sr-only" id="ic-time-input-8-assistive-hint">
        Type or use the up and down arrow keys to change the values for the hour, minute, and second.
      </span>
      <span aria-live="assertive" class="sr-only" id="live-region"></span>
      <div>
        <ic-input-component-container aria-labelledby="ic-time-input-8-label ic-time-input-8-screen-reader-info ic-time-input-8-validation-text  ic-time-input-8-assistive-hint" id="ic-time-input-8" role="group" size="medium" validationstatus="error">
          <div class="input-container">
            <div class="time-inputs">
              <input aria-label="hour" aria-required="false" class="hour-input" id="hour-input" inputmode="number" pattern="[0-9]*" placeholder="HH">
              :
              <input aria-label="minute" aria-required="false" class="minute-input" id="minute-input" inputmode="number" pattern="[0-9]*" placeholder="MM">
              :
              <input aria-label="second" aria-required="false" class="second-input" id="second-input" inputmode="number" pattern="[0-9]*" placeholder="SS">
            </div>
            <div class="action-buttons">
              <ic-button aria-label="Clear input" class="clear-button hidden" id="clear-button" size="medium" theme="dark" variant="icon-tertiary">
                svg
              </ic-button>
            </div>
          </div>
        </ic-input-component-container>
      </div>
      <span aria-live="polite" class="sr-only" id="ic-time-input-8-selected-time-info">
        <span role="status"></span>
      </span>
      <ic-input-validation arialivemode="assertive" for="ic-time-input-8" message="Test error text" status="error"></ic-input-validation>
    </ic-input-container>
  </template>
  <input class="ic-input" name="ic-time-input-8" type="hidden" value="">
</ic-time-input>
`;
